Module 2: REST basics
* optimized dependency version description;
* added new TagRepository tests;
* overall code refactoring;