@@ -1,25 +1,29 @@
 package com.epam.esm.gift.service.impl;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
+import org.apache.commons.collections4.ListUtils;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.epam.esm.gift.converter.CertificateEntityMapper;
-import com.epam.esm.gift.converter.TagEntityMapper;
 import com.epam.esm.gift.dto.CertificateDTO;
 import com.epam.esm.gift.dto.TagDTO;
 import com.epam.esm.gift.error.EntityNotFoundException;
+import com.epam.esm.gift.mapper.CertificateEntityMapper;
+import com.epam.esm.gift.mapper.TagEntityMapper;
 import com.epam.esm.gift.model.Tag;
 import com.epam.esm.gift.repository.CertificateRepository;
 import com.epam.esm.gift.repository.TagRepository;
 import com.epam.esm.gift.service.BaseService;
 
-@Transactional
 @Service
 public class CertificateServiceImpl implements BaseService<CertificateDTO, Long> {
+
+    private static final String ERROR_CERTIFICATE_IS_NULL = "Certificate must not be null";
+    private static final String ERROR_CERTIFICATE_ID_IS_NULL = "Certificate ID must not be null";
+    private static final String ERROR_TAG_LIST_IS_NULL = "Tags list must not be null";
 
     private final CertificateRepository certificateRepository;
     private final CertificateEntityMapper certificateConverter;
@@ -39,7 +43,10 @@ public class CertificateServiceImpl implements BaseService<CertificateDTO, Long>
     }
 
     @Override
+    @Transactional(readOnly = true)
     public CertificateDTO findOne(final Long id) {
+        Objects.requireNonNull(id, ERROR_CERTIFICATE_ID_IS_NULL);
+
         return certificateRepository.findById(id)
             .map(certificateConverter::mapEntityToDto)
             .map(this::initializeCertificateTags)
@@ -47,6 +54,7 @@ public class CertificateServiceImpl implements BaseService<CertificateDTO, Long>
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<CertificateDTO> findAll() {
         return certificateRepository.findAll()
             .stream()
@@ -56,15 +64,23 @@ public class CertificateServiceImpl implements BaseService<CertificateDTO, Long>
     }
 
     @Override
+    @Transactional
     public CertificateDTO create(final CertificateDTO item) {
+        Objects.requireNonNull(item, ERROR_CERTIFICATE_IS_NULL);
+
         var certificate = certificateConverter.mapDtoToEntity(item);
         var createdCertificate = certificateRepository.create(certificate.copy().build());
+
         var linkedTags = linkTagsToCertificate(createdCertificate.getId(), item.tags());
+
         return certificateConverter.mapEntityToDto(createdCertificate).copy().tags(linkedTags).build();
     }
 
     @Override
+    @Transactional
     public CertificateDTO update(final CertificateDTO item) {
+        Objects.requireNonNull(item, ERROR_CERTIFICATE_IS_NULL);
+
         var certificate = certificateConverter.mapDtoToEntity(item);
         var updatedCertificate = certificateRepository.update(certificate);
 
@@ -76,22 +92,30 @@ public class CertificateServiceImpl implements BaseService<CertificateDTO, Long>
     }
 
     @Override
+    @Transactional
     public void deleteById(final Long id) {
+        Objects.requireNonNull(id, ERROR_CERTIFICATE_ID_IS_NULL);
         var certificate = certificateRepository.findById(id).orElseThrow(() -> certificateIsNotFound(id));
         certificateRepository.delete(certificate);
     }
 
     private CertificateDTO initializeCertificateTags(final CertificateDTO certificate) {
+        Objects.requireNonNull(certificate, ERROR_CERTIFICATE_IS_NULL);
+
         var certificateTags = tagRepository.findTagsByCertificateId(certificate.id())
             .stream()
             .map(tagConverter::mapEntityToDto)
             .toList();
+
         return certificate.copy().tags(certificateTags).build();
     }
 
     private List<TagDTO> linkTagsToCertificate(final Long certificateId, final List<TagDTO> tags) {
-        if ((certificateId == null) || (tags == null) || tags.isEmpty()) {
-            return List.of();
+        Objects.requireNonNull(certificateId, ERROR_CERTIFICATE_ID_IS_NULL);
+        Objects.requireNonNull(tags, ERROR_TAG_LIST_IS_NULL);
+
+        if (tags.isEmpty()) {
+            return Collections.emptyList();
         }
 
         var tagNames = tags.stream().map(TagDTO::name).filter(Objects::nonNull).toList();
@@ -104,10 +128,7 @@ public class CertificateServiceImpl implements BaseService<CertificateDTO, Long>
             .map(tagRepository::create)
             .toList();
 
-        var certificateTags = new ArrayList<Tag>(existingTags.size() + createdTags.size()) {{
-            addAll(existingTags);
-            addAll(createdTags);
-        }};
+        var certificateTags = ListUtils.union(existingTags, createdTags);
 
         tagRepository.addTagsToCertificate(certificateId, certificateTags);
 
